Prevent text overflow from commit messages with long words in popover

--- a/BlazarUI/app/stylus/components/branch-state/commits-summary.styl
+++ b/BlazarUI/app/stylus/components/branch-state/commits-summary.styl
@@ -50,6 +50,9 @@
   font-style italic
   padding-top 6px
   padding-bottom 6px
+  max-width 225px
+  overflow hidden
+  text-overflow ellipsis
 
 .commits-summary-popover__footer
   margin-top 14px
